# providenie

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: providenie.yml
.sample/bot/: callbacks.py  const.py  handlers.py  states.py
.sample/bot/conversations/: fund_application.py  info.py  menu.py
.sample/core/: email.py  settings.py
bot/: services.py
bot/conversations/: menu.py
core/: email.py  logger.py  send_email.py  settings.py
refactor/: main.py
refactor/bot/: callbacks.py  const.py  handlers.py  markups.py  sevices.py  states.py  utils.py
refactor/bot/constants/: button.py  buttons.py  callback.py  callbacks.py  forms_info.py  key.py  keyboards.py  keys.py  state.py  states.py
refactor/bot/conversations/: base.py  form_application.py  fund_application.py  info.py  main_application.py  menu.py  menu_application.py  models.py  parents_chat.py  volunteer_application.py
refactor/bot/core/: email.py  logger.py  settings.py
refactor/core/: logger.py  settings.py
src/: main.py
src/bot/: constants.py  dictionaries.py  error_handler.py  handlers.py  keys.py  services.py  states.py  templates.py  utils.py
src/bot/constans/: fund_app_callbacks.py  fund_app_constans.py  fund_app_states.py
src/bot/constants/: button.py  callback.py  key.py  state.py
src/bot/conversations/: about_fond.py  about_fund.py  ask_question.py  form_application.py  fund_application.py  joining_volunteer.py  (+7 more)
src/core/: email.py  logger.py  settings.py
(+46 files in other folders)
