[tool.poetry]
name = "providenie"
version = "0.1.0"
description = "Проект телеграм-бота, который позволяет разгрузить кураторов/координаторов фонда Провидение."
authors = [
    "Карев Виталий", "Дарья Малышева", "Андрей Распутин", "Данилов Николай",
    "Кузнецов Дмитрий", "Моторин Антон", "Курятников Александр", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
python-telegram-bot = "20.0b0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
